# cc-bench

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVIDENCE.md  LAUNCH.md  LICENSE  METHODOLOGY.md  PRIOR_ART.md  README.md  ROADMAP.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ccbench/: __init__.py  analysis.py  cli.py  doctor.py  fromgit.py  fromrepo.py  htmlreport.py  models.py  report.py  runner.py  sandbox.py  scaffold.py  suite.py  validate.py  verify.py  workspace.py
ccbench/agents/: __init__.py  base.py  claude_code.py  codex.py  mock.py
ci/: ci.yml
conditions/: baseline.yaml  bloated-context.yaml  placebo-claude-md.yaml  with-claude-md.yaml
examples/: README.md  real-claude-hard-report.md  real-claude-report.md  sample-report.csv  sample-report.html  sample-report.md
experiments/001-superclaude-token-claim/: PROTOCOL.md
suites/hard/: tasks.yaml
suites/hard/tasks/json_path/hidden/: test_hidden_json_path.py
suites/js_sample/: tasks.yaml
suites/sample/: tasks.yaml
templates/: CLAUDE.md  cc-bench.yml
tests/: test_agents.py  test_analysis.py  test_antitamper.py  test_calibration.py  test_cli_errors.py  test_doctor.py  test_edges.py  test_fromgit.py  test_fromrepo.py  test_hard_suite.py  test_hidden_tests.py  test_js_suite.py  test_models.py  test_report.py  test_runner.py  test_sandbox.py  test_scaffold.py  test_stratified.py  test_suite.py  test_workspace_verify.py
(+22 files in other folders)
