[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-bench"
version = "0.1.0"
description = "Measure whether your Claude Code setup actually helps - a reproducible, evidence-based benchmark harness for coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gael", email = "gaeltuc@gmail.com" }]
keywords = ["claude-code", "benchmark", "evals", "coding-agent", "llm", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Galou3/cc-bench"
Issues = "https://github.com/Galou3/cc-bench/issues"

[project.scripts]
ccbench = "ccbench.cli:main"

[tool.setuptools.packages.find]
include = ["ccbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
